--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <label for="rankguess">Rank: </label>
                     <input type="number" min="1" max="999999999" id="rankguessinput">
                     <button onclick="submitFunc();">Submit</button><br><br>
-                    <p id="results" style="display: none;" class="text-white-75">test (placeholder)</p>
+                    <p id="results" style="display: none;" class="text-white-75">placeholder text, this should never be visible</p>
                     <video width="700" height="525" controls>
                         <source src="assets/vid/sukisuki.mp4" type="video/mp4">
                     </video>
@@ -68,17 +68,20 @@
                         }
                         jsonData.push(rowData);
                     }
-                    const url = encodeURIComponent(jsonData[0].profile); // Replace with your actual URL
-                    const linkText = "Profile"; // Replace with the text you want for the link
 
-                    const linkElement = document.createElement("a");
-                    linkElement.href = url;
-                    linkElement.textContent = linkText;
-                    linkElement.target = "_blank"; // Open in a new tab
+                    document.getElementById('results').textContent = jsonData[0].profile;
 
-                    const resultsElement = document.getElementById('results');
-                    resultsElement.innerHTML = ''; // Clear the existing content
-                    resultsElement.appendChild(linkElement);
+                    // const url = encodeURIComponent(jsonData[0].profile); // Replace with your actual URL
+                    // const linkText = "Profile"; // Replace with the text you want for the link
+
+                    // const linkElement = document.createElement("a");
+                    // linkElement.href = url;
+                    // linkElement.textContent = linkText;
+                    // linkElement.target = "_blank"; // Open in a new tab
+
+                    // const resultsElement = document.getElementById('results');
+                    // resultsElement.innerHTML = ''; // Clear the existing content
+                    // resultsElement.appendChild(linkElement);
 
         
                 } catch (error) {
