slightly changed submit function

--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
         <!-- Function to deal with getting user input -->
         <script>
             function submitFunc(){
-                // Selecting the input element and get its value 
-                var inputVal = document.getElementById("results").value;
                 //Display result text
-                var text = document.getElementById("results");
+                const text = document.getElementById("results");
                 text.style.display = "block";
             }
         </script>
